--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -99,6 +99,14 @@ journals:
 proceedings:
 
 - id: ""
+  author: "Siyue Chen, Loek Cleophas, Sandro Schulze, and Jacob Krüger"
+  title: "Use the Forks, Look! Visualizations for Exploring Fork Ecosystems."
+  booktitle: "International Conference on Software Analysis, Evolution and Reengineering (SANER)"
+  doi: ""
+  publisher: "ACM"
+  year: 2024
+
+- id: ""
   author: "Samuel Idowu, Yorick Sens, Thorsten Berger, Jacob Krüger, and Michael Vierhauser"
   title: "A Large-Scale Study of ML-Related Python Projects."
   booktitle: "Symposium on Applied Computing (SAC)"
