--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -119,7 +119,7 @@ proceedings:
   title: "Use the Forks, Look! Visualizations for Exploring Fork Ecosystems."
   booktitle: "International Conference on Software Analysis, Evolution and Reengineering (SANER)"
   doi: ""
-  publisher: "ACM"
+  publisher: "IEEE"
   year: 2024
   link: ""
 
