--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -191,7 +191,7 @@ proceedings:
 
 - id: ""
   author: "Philipp Zellmer, Jacob Krüger, and Thomas Leich"
-  title: "Decision Making for Managing Automotive Platforms: An Interview Survey on the Sate-of-Practice."
+  title: "Decision Making for Managing Automotive Platforms: An Interview Survey on the State-of-Practice."
   booktitle: "International Conference on the Foundations of Software Engineering (FSE)"
   doi: ""
   publisher: "ACM"
