--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -56,7 +56,7 @@ journals:
   doi: "10.1016/j.jss.2024.112106"
   year: 2024
 
-- id: ""
+- id: Zellmer2024ProductStructuring
   author: "Philipp Zellmer, Lennart Holsten, Jacob Krüger, and Thomas Leich"
   title: "The Terminology of Automotive Product-Structuring Concepts: A Systematic Mapping Study."
   journal: "IEEE Transactions on Engineering Management"
@@ -234,7 +234,7 @@ proceedings:
   year: 2024
   link: ""
 
-- id: ""
+- id: Nielebock2024ASAP
   author: "Sebastian Nielebock, Paul Blockhaus, Jacob Krüger, and Frank Ortmeier"
   title: "ASAP-Repair: API-Specific Automated Program Repair Based on API Usage Graphs."
   booktitle: "International Workshop on Automated Program Repair (APR)"
